--- a/css/overlay.css
+++ b/css/overlay.css
@@ -7,10 +7,10 @@ img {
 	height: 50px;
 }
 img.github {
-	right: 10;
+	right: 10px;
 }
 img.bukkit {
-	right: 65;
+	right: 65px;
 }
 span {
 	position: fixed;
