--- a/css/overlay.css
+++ b/css/overlay.css
@@ -35,9 +35,9 @@ span {
 	font-weight: bold;
 	font-size: 150%;
 	color: #222222;
-	background-color: #888888;
+	background-color: #F2F2F2;
 	border-color: #555555;
-	border-width: 3px;
+	border-width: 1px;
 	border-style: solid;
 }
 img:hover {
