--- a/css/overlay.css
+++ b/css/overlay.css
@@ -1,10 +1,15 @@
-img {
+img:not(.header) {
 	opacity: 0.7;
 	filter: aplpha(opacity=40);
 	position: fixed;
 	bottom: 5px;
 	width: 50px;
 	height: 50px;
+}
+img.header {
+	opacity: 1.0;
+	filter: aplpha(opacity=40);
+	position: fixed;
 }
 img.github {
 	right: 10px;
