--- a/css/layout.css
+++ b/css/layout.css
@@ -12,10 +12,14 @@ ul {
 	width: 100%;
 	height: 70px;
 }
+.twitter-timeline {
+	float: right;
+}
 table {
-	margin:0px;
+	float: none;
+	width: 90%;
+	margin: 0 auto;
 	padding:0px;
-	width:100%;
 	box-shadow: 10px 10px 5px #888888;
 	border:3px solid #666666;
 	
